# shuttle-cch23-xmas

./: Cargo.toml  README.md  Secrets.toml.enc  justfile  test.hurl
.github/workflows/: deploy.yml
src/: app_state.rs  errors.rs  handlers.rs  lib.rs  main.rs  prelude.rs  repo.rs
src/handlers/: day01.rs  day04.rs  day05.rs  day07.rs  day08.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day18.rs  day19.rs  day20.rs  day21.rs  day22.rs  mod.rs
src/utils/: mod.rs  rqwest.rs
test/integration/: day-1.hurl  day01.hurl  day04.hurl  day06.hurl  day07.hurl  day08.hurl  day11.hurl
