[package]
name = "cch23-xmas"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
axum = { version = "0.7.2", features = ["macros", "tracing", "ws"] }
axum-extra = { version = "0.9.0", features = ["typed-header", "multipart"] }
base64 = "0.21.5"
chrono = "0.4.31"
emojis = "0.6.1"
futures = "0.3.29"
html-escape = "0.2.13"
image = { version = "0.24.7"}
regex = "1.10.2"
reqwest = "0.11.22"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
sha2 = "0.10.8"
shuttle-axum = { version = "0.35", default-features = false, features = ["axum-0-7"] }
shuttle-persist = "0.35.1"
shuttle-runtime = "0.35"
shuttle-shared-db = { version = "0.35.1", features = ["postgres"] }
sqlx = "0.7.3"
tar = "0.4.40"
thiserror = "1.0.51"
tokio = "1.34.0"
tower-http = { version = "0.5.0", features = ["trace", "fs"] }
tracing = "0.1.40"
ulid = { version = "1.1.0", features = ["uuid"] }
uuid = { version = "1.6.1" }
